# TAAL

./: .gitignore  build.gradle.kts  devlog.md  settings.gradle.kts
composeApp/: build.gradle.kts  google-services.json
composeApp/native/: CMakeLists.txt  miniaudio.cpp
composeApp/native/include/: miniaudio.h
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/kotlin/org/example/project/: AudioEngineWrapper.kt  AudioImporter.kt  BeatEditorViewModel.kt  MainActivity.kt
composeApp/src/androidMain/kotlin/org/example/project/auth/: AuthRepositoryImpl.kt
composeApp/src/androidMain/kotlin/org/example/project/database/: DriverFactory.kt
composeApp/src/commonMain/kotlin/org/example/project/: App.kt  AudioImporter.kt  AudioPlayer.kt  BeatEditorScreen.kt  BeatEditorState.kt  BeatSelector.kt  DrumBeatEditor.kt  LoginSignupScreen.kt  MusicDatabaseRepository.kt  PianoRollEditor.kt  ProjectSelectScreen.kt  StandardsScreen.kt  StepSequencer.kt  TileView.kt  TileViewModel.kt  rememberBeatEditorState.kt
composeApp/src/commonMain/kotlin/org/example/project/auth/: AuthRepository.kt
composeApp/src/commonMain/kotlin/org/example/project/database/: DriverFactory.kt
composeApp/src/iosMain/kotlin/org/example/project/: AudioImporter.kt  AudioPlayer.kt
composeApp/src/jvmMain/kotlin/org/example/project/: AudioImporter.kt  AudioPlayer.kt  Main.kt
composeApp/src/wasmJsMain/kotlin/org/example/project/: AudioImporter.kt  AudioPlayer.kt
gradle/: libs.versions.toml
iosApp/iosApp.xcodeproj/: project.pbxproj
(+6 files in other folders)
